<resources>
    <string name="app_name">FlightlessBirdWithAuth</string>
    <string name="create_btn_string">Create</string>
    <string name="home_screen_title">My Vacations</string>
    <string name="login_screen_title">Flightless Bird</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="map_screen_title">Route Map</string>
    <string name="from_sample_lake_station">From Sample Lake Station</string>
    <string name="to_sample_inlet_station">To Sample Inlet Station</string>
    <string name="new_vacation">New Vacation</string>
    <string name="give_your_vacation_a_name">Give Your Vacation a Name</string>
    <string name="number_of_cities_to_visit">Number of Cities to Visit</string>
    <string name="trip_duration">Trip Duration</string>
    <string name="days">Days</string>
    <string name="select_a_start_date">Select a Start Date</string>
    <string name="starting_station">Starting Station</string>
    <string name="placeholder_trip_name">Placeholder Trip Name</string>
    <string name="place_holder_trip_name">Place Holder Trip Name</string>
    <string name="placeholder_city_list">City A, City B, City C</string>
    <string name="origin_station_name">Origin Station Name</string>
    <string name="train_service_name">Train Service Name</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="departs_at_hh_mm">Departs at HH:MM</string>
    <string name="arrives_at_hh_mm">Arrives at HH:MM</string>
    <string name="destination_station_name">Destination Station Name</string>
    <string-array name="cities">
        <item>Aberdeen</item>
        <item>Balham</item>
        <item>Barking</item>
        <item>Basingstoke</item>
        <item>Bath Spa</item>
        <item>Birmingham International</item>
        <item>Birmingham Moor Street</item>
        <item>Birmingham New Street</item>
        <item>Blackfriars</item>
        <item>Brighton</item>
        <item>Bristol Temple Meads</item>
        <item>Bromley South</item>
        <item>Cambridge</item>
        <item>Canada Water</item>
        <item>Cannon Street</item>
        <item>Cardiff Central</item>
        <item>Cardiff Queen Street</item>
        <item>Charing Cross</item>
        <item>Chelmsford</item>
        <item>Chester</item>
        <item>Clapham Junction</item>
        <item>Coventry</item>
        <item>Doncaster</item>
        <item>Ealing Broadway</item>
        <item>Earlsfield</item>
        <item>East Croydon</item>
        <item>Edinburgh</item>
        <item>Euston</item>
        <item>Feltham</item>
        <item>Fenchurch Street</item>
        <item>Finsbury Park</item>
        <item>Gatwick Airport</item>
        <item>Glasgow Central</item>
        <item>Glasgow Queen Street</item>
        <item>Guildford</item>
        <item>Highbury &amp; Islington</item>
        <item>King\'s Cross</item>
        <item>Kingston</item>
        <item>Leeds</item>
        <item>Leicester</item>
        <item>Lewisham</item>
        <item>Liverpool Central</item>
        <item>Liverpool Lime Street</item>
        <item>Liverpool Street</item>
        <item>London Bridge</item>
        <item>Luton Airport Parkway</item>
        <item>Manchester Oxford Road</item>
        <item>Manchester Piccadilly</item>
        <item>Manchester Victoria</item>
        <item>Marylebone</item>
        <item>Moorfields</item>
        <item>Moorgate</item>
        <item>Newcastle</item>
        <item>Nottingham</item>
        <item>Paddington</item>
        <item>Paisley Gilmour Street</item>
        <item>Preston</item>
        <item>Putney</item>
        <item>Reading</item>
        <item>Richmond</item>
        <item>Romford</item>
        <item>Sheffield</item>
        <item>Shepherds Bush</item>
        <item>Slough</item>
        <item>Southampton Central</item>
        <item>St.Albans City</item>
        <item>St.Pancras</item>
        <item>Stansted Airport</item>
        <item>Stevenage</item>
        <item>Stratford</item>
        <item>Surbiton</item>
        <item>Sutton (Surrey)</item>
        <item>Tottenham Hale</item>
        <item>Twickenham</item>
        <item>Upminster</item>
        <item>Vauxhall</item>
        <item>Victoria</item>
        <item>Waterloo</item>
        <item>Watford Junction</item>
        <item>West Ham</item>
        <item>Whitechapel</item>
        <item>Wimbledon</item>
        <item>Woking</item>
        <item>York</item>
    </string-array>
</resources>