<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".NewTripActivity">

    <TextView
        android:id="@+id/newTripHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="@dimen/standardMargin"
        android:layout_marginEnd="@dimen/standardMargin"
        android:text="@string/new_vacation"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/headerGuidline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/headerGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/homePageHeaderHeight" />

    <androidx.cardview.widget.CardView

        android:id="@+id/tripNameCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tripSettingCardHeight"
        android:layout_marginStart="@dimen/meduimMargin"
        android:layout_marginEnd="@dimen/meduimMargin"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:backgroundTint="?attr/colorOnTertiary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/tripNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:hint="@string/give_your_vacation_a_name"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cityCountCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tripSettingCardHeight"
        android:layout_marginStart="@dimen/meduimMargin"
        android:layout_marginTop="@dimen/meduimMargin"
        android:layout_marginEnd="@dimen/meduimMargin"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tripNameCardView"
        android:backgroundTint="?attr/colorOnTertiary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/meduimMargin"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_marginBottom="@dimen/meduimMargin"
                android:text="@string/number_of_cities_to_visit"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:textColor="?attr/colorTertiary"/>

            <Spinner
                android:id="@+id/cityCountSPinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="textEnd"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tripDurationCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tripSettingCardHeight"
        android:layout_marginStart="@dimen/meduimMargin"
        android:layout_marginTop="@dimen/meduimMargin"
        android:layout_marginEnd="@dimen/meduimMargin"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityCountCardView"
        android:backgroundTint="?attr/colorOnTertiary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/meduimMargin"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_marginBottom="@dimen/meduimMargin"
                android:gravity="center_vertical"
                android:text="@string/trip_duration"
                android:textSize="18sp"
                android:textColor="?attr/colorTertiary"/>

            <Spinner
                android:id="@+id/tripDurationSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/meduimMargin"
                android:layout_marginEnd="@dimen/meduimMargin"
                android:layout_marginBottom="@dimen/meduimMargin"
                android:gravity="center_vertical"
                android:text="@string/days"
                android:textSize="18sp"
                android:textColor="?attr/colorTertiary"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/startDateInput"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorOnTertiary"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripDurationCardView">

        <EditText
            android:id="@+id/date_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/select_a_start_date"
            android:inputType="none"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/startingCityCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tripSettingCardHeight"
        android:layout_marginStart="@dimen/meduimMargin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/meduimMargin"
        android:backgroundTint="?attr/colorOnTertiary"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateInput">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startingCityTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/meduimMargin"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_marginBottom="@dimen/meduimMargin"
                android:gravity="center_vertical"
                android:text="@string/starting_station"
                android:textColor="?attr/colorTertiary"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/startingCitySPinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="textEnd" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/createTripButton"
        android:layout_width="130dp"
        android:layout_height="64dp"
        android:backgroundTint="?attr/colorPrimaryContainer"
        android:text="@string/create_btn_string"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripDurationCardView"
        app:layout_constraintVertical_bias="0.827" />

</androidx.constraintlayout.widget.ConstraintLayout>