<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="?attr/colorOnTertiary"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        android:elevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/originTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standardMargin"
                android:layout_marginTop="@dimen/standardMargin"
                android:text="@string/origin_station_name"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/arrowImageView"
                android:layout_width="32dp"
                android:layout_height="135dp"
                android:layout_marginStart="@dimen/standardMargin"
                android:rotation="90"
                android:scaleX="6"
                android:scaleY="2"
                app:layout_constraintBottom_toTopOf="@+id/destinationTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/originTextView"
                app:srcCompat="@drawable/baseline_arrow_right_alt_1024"
                app:tint="?attr/colorTertiary" />

            <ImageView
                android:id="@+id/providerImageVIew"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/standardMargin"
                android:layout_marginTop="@dimen/standardMargin"
                app:layout_constraintStart_toEndOf="@+id/arrowImageView"
                app:layout_constraintTop_toBottomOf="@+id/originTextView"
                app:srcCompat="@drawable/baseline_train_32"
                app:tint="?attr/colorTertiary" />

            <TextView
                android:id="@+id/providerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train_service_name"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginStart="@dimen/standardMargin"
                android:layout_marginBottom="@dimen/xMiniMargin"
                app:layout_constraintBottom_toBottomOf="@+id/providerImageVIew"
                app:layout_constraintStart_toEndOf="@+id/providerImageVIew" />

            <ImageView
                android:id="@+id/dateImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/standardMargin"
                android:layout_marginTop="22dp"
                app:layout_constraintStart_toEndOf="@+id/arrowImageView"
                app:layout_constraintTop_toBottomOf="@+id/providerTextView"
                app:srcCompat="@drawable/baseline_calendar_month_32"
                app:tint="?attr/colorTertiary" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standardMargin"
                android:text="@string/yyyy_mm_dd"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginBottom="@dimen/xMiniMargin"
                app:layout_constraintBottom_toBottomOf="@+id/dateImageView"
                app:layout_constraintStart_toEndOf="@+id/providerImageVIew" />

            <ImageView
                android:id="@+id/timeImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/standardMargin"
                android:layout_marginTop="22dp"
                app:layout_constraintStart_toEndOf="@+id/arrowImageView"
                app:layout_constraintTop_toBottomOf="@+id/dateImageView"
                app:srcCompat="@drawable/baseline_access_time_32"
                app:tint="?attr/colorTertiary" />

            <TextView
                android:id="@+id/departureTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standardMargin"
                android:layout_marginBottom="@dimen/smallMargin"
                android:layout_marginTop="12dp"
                android:text="@string/departs_at_hh_mm"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"

                app:layout_constraintStart_toEndOf="@+id/providerImageVIew"
                app:layout_constraintTop_toBottomOf="@+id/dateImageView" />

            <TextView
                android:id="@+id/arrivalTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standardMargin"
                android:layout_marginTop="@dimen/smallMargin"
                android:text="@string/arrives_at_hh_mm"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintStart_toEndOf="@+id/providerImageVIew"
                app:layout_constraintTop_toBottomOf="@id/departureTimeTextView" />

            <TextView
                android:id="@+id/destinationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardMargin"
                android:layout_marginStart="@dimen/standardMargin"
                android:layout_marginBottom="@dimen/standardMargin"
                android:text="@string/destination_station_name"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                app:layout_constraintBaseline_toBottomOf="@dimen/xMiniMargin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/arrivalTimeTextView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/seeMapCardView"
                android:background="?attr/colorOnPrimaryContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardBackgroundColor="?attr/colorPrimaryContainer"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/baseline_map_32"
                        app:tint="?attr/colorOnPrimaryContainer" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>